# storm-ws

./: .dockerignore  .drone.yml  .editorconfig  .gitignore  .gitmodules  .readthedocs.yml  CHANGES.rst  Dockerfile  LICENSE  MANIFEST.in  README.rst  docker-compose.full.yml  docker-compose.yml  docker-services.yml  invenio.cfg  last_build.txt  pyproject.toml  pytest.ini  run-tests.sh  setup.cfg  setup.py  uwsgi.ini
.github/workflows/: docker.yaml
bdcrrm_server/: __init__.py  cli.py  config.py  controller.py  ext.py  forms.py  indexer.py  initializer.py  security.py  version.py  views.py
bdcrrm_server/controllers/: __init__.py  graph.py  graph_node.py  project.py  project_graph.py
bdcrrm_server/models/: __init__.py  base.py  files.py  graph.py  project.py  project_user.py
bdcrrm_server/models/graph/: __init__.py  api.py  models.py
bdcrrm_server/models/graph/jsonschemas/: __init__.py
bdcrrm_server/models/graph/jsonschemas/records/: nodeparent-v1.0.0.json  noderecord-v1.0.0.json
bdcrrm_server/models/graph/mappings/: __init__.py
bdcrrm_server/models/graph/mappings/v7/node_records/drafts/: nodedraft-v1.0.0.json
bdcrrm_server/models/project/: __init__.py
bdcrrm_server/resources/: __init__.py  initializer.py  parser.py  project.py  server.py  service.py
bdcrrm_server/resources/files/: __init__.py  config.py  resource.py
bdcrrm_server/resources/project/: __init__.py  adapter.py  config.py  resource.py
bdcrrm_server/resources/records/: __init__.py  config.py  resource.py
bdcrrm_server/schema/: __init__.py  graph.py  project.py
bdcrrm_server/services/: __init__.py  components.py  files.py  graph.py  graph_node.py  links.py  project.py  project_files.py  project_graph.py
bdcrrm_server/services/files/: __init__.py  config.py  service.py
bdcrrm_server/services/project/: __init__.py  config.py  service.py
bdcrrm_server/services/records/: __init__.py  config.py  service.py
bdcrrm_server/views/: __init__.py  files.py  graph.py  graph_node.py  project.py  server.py
docker/nginx/: Dockerfile
docker/nginx/conf.d/: default.conf
docs/database/: storm-ws-database.drawio  storm-ws-database.html
docs/spec/: openapi.yml
docs/sphinx/: Makefile  api.rst  class_bdcrrm_server.rst  conf.py  history.rst  index.rst  installation.rst  license.rst  repository.rst  usage.rst
examples/: example.py
storm_ws/: __init__.py  cli.py  config.py  ext.py  security.py  version.py  views.py
storm_ws/models/: __init__.py
storm_ws/models/graph/: __init__.py  api.py
storm_ws/models/graph/jsonschemas/records/: nodeparent-v1.0.0.json
storm_ws/models/pipeline/: __init__.py  api.py  models.py
storm_ws/models/pipeline/jsonschemas/: __init__.py
storm_ws/models/pipeline/jsonschemas/records/: compendiumparent-v1.0.0.json  compendiumrecord-v1.0.0.json
storm_ws/models/pipeline/mappings/v7/compendium_records/: __init__.py
storm_ws/models/pipeline/mappings/v7/compendium_records/drafts/: compendiumdraft-v1.0.0.json
storm_ws/models/project/: __init__.py  api.py  models.py
storm_ws/resources/: __init__.py  initializer.py  server.py  service.py
storm_ws/resources/compendium/: __init__.py  config.py  resource.py
storm_ws/resources/files/: __init__.py  config.py  resource.py
storm_ws/resources/project/: __init__.py  adapter.py  config.py  resource.py
storm_ws/resources/records/: __init__.py  resource.py
storm_ws/schema/: __init__.py  compendium.py  project.py
storm_ws/services/: __init__.py  cache.py  components.py  generators.py  links.py  permission.py
storm_ws/services/compendium/: __init__.py  config.py  service.py
storm_ws/services/files/: __init__.py  config.py  service.py
storm_ws/services/project/: __init__.py  config.py  service.py
storm_ws/services/records/: __init__.py  service.py
tests/: test_bdcrrm_server.py
