[tool.poetry]
name = "storm-ws"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/storm-platform/storm-ws"
authors = ["Felipe Menino Carlos <felipe.carlos@inpe.br>"]
description = "Service for reproducible collaborative research."
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS",
]

[tool.poetry.dependencies]
python = "^3.8"
uWSGI = "^2.0.20"
invenio-app = "^1.3.3"

storm-commons = { git = "https://github.com/storm-platform/storm-commons", rev = "main", extras = ["elasticsearch7", "postgresql"] }
storm-project = { git = "https://github.com/storm-platform/storm-project", rev = "main" }
storm-compendium = { git = "https://github.com/storm-platform/storm-compendium", rev = "main" }
storm-pipeline = { git = "https://github.com/storm-platform/storm-pipeline", rev = "main" }
storm-deposit = { git = "https://github.com/storm-platform/storm-deposit", rev = "main" }
storm-deposit-inveniordm = { git = "https://github.com/storm-platform/storm-deposit-inveniordm", rev = "main" }
storm-job = { git = "https://github.com/storm-platform/storm-job", rev = "main" }
storm-job-reana = { git = "https://github.com/storm-platform/storm-job-reana", rev = "main" }
storm-oauth = {git = "https://github.com/storm-platform/storm-oauth.git", rev = "master"}

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[tool.poetry.plugins]

[tool.poetry.plugins."invenio_base.apps"]
"storm_ws" = "storm_ws:StormWS"

[tool.poetry.plugins."invenio_base.api_apps"]
"storm_ws" = "storm_ws:StormWS"

[tool.poetry.plugins."invenio_base.api_blueprints"]
"storm_ws_api" = "storm_ws.views:create_ws_blueprint_api"

[tool.poetry.plugins."invenio_config.module"]
"storm_ws" = "storm_ws.config"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
