[tool.poetry]
name = "storm-ws"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/storm-platform/storm-ws"
authors = ["Felipe Menino Carlos <felipe.carlos@inpe.br>"]
description = "Service for reproducible collaborative research."

packages = [
    { include = "./storm_ws" }
]

classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS",
]

[tool.poetry.dependencies]
python = "^3.8"

uWSGI = "^2.0.20"

# invenio framework
invenio = "<=3.5.0a4"
invenio-base = "< 1.3.0"
invenio-app = "<= 1.3.3"
invenio-logging = "<= 1.3.2"
invenio-s3 = "<= 1.0.6"
invenio-indexer = "<= 1.2.7"
invenio-records = "<= 1.7.6"

# monitoring
sentry-sdk = "<= 1.5.12"

# to avoid invenio errors with the itsdangerous version 2.1.x
itsdangerous = "< 2.1.0"

# celery requirement
celery = "< 5.2"
setuptools = "< 59.7.0"

storm-commons = { git = "https://github.com/storm-platform/storm-commons", rev = "main", extras = ["elasticsearch7", "postgresql"] }
storm-project = { git = "https://github.com/storm-platform/storm-project", rev = "main" }

#
# Storm Compendium
#
storm-compendium = { git = "https://github.com/storm-platform/storm-compendium", rev = "main" }

#
# Storm Workflow
#
storm-workflow = { git = "https://github.com/storm-platform/storm-workflow", rev = "main" }

#
# Storm Deposit
#
storm-deposit = { git = "https://github.com/storm-platform/storm-deposit", rev = "main" }
storm-deposit-inveniordm = { git = "https://github.com/storm-platform/storm-deposit-inveniordm", rev = "main" }

#
# Storm Execution
#
storm-execution = {git = "https://github.com/storm-platform/storm-execution", rev = "main"}
storm-execution-reana = { git = "https://github.com/storm-platform/storm-execution-reana", rev = "main" }

#
# Auxiliary tools
#
storm-oauth = {git = "https://github.com/storm-platform/storm-oauth.git", rev = "master"}

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[tool.poetry.plugins]

[tool.poetry.plugins."invenio_base.apps"]
"storm_ws" = "storm_ws:StormWS"

[tool.poetry.plugins."invenio_base.api_apps"]
"storm_ws" = "storm_ws:StormWS"

[tool.poetry.plugins."invenio_base.api_blueprints"]
"storm_ws_api" = "storm_ws.views:create_ws_blueprint_api"

[tool.poetry.plugins."invenio_config.module"]
"storm_ws" = "storm_ws.config"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
